# Parallel-Traffic-Simulation

./: .gitignore  CMakeLists.txt  README.md  entity.c  entity.h  globals.h  graphic.c  main.c  map.c  map.txt  route.c  route.h  simulation  traffic.c
include/: entity.h  globals.h  mpiutil.h  route.h
src/: entity.c  main.c  mpiutil.c  route.c  simulation
